# dotfiles

./: .gitignore  .pre-commit-config.yaml  DEFAULT_WALLPAPER_INSTALLATION.md  HOW_TO_USE_AI_INTEGRATION.md  Makefile  REFACTORING_COMPLETE.md  SOCKET_INTEGRATION_PROMPT.txt  TESTING_CHECKLIST.md  WALLPAPER_ORCHESTRATOR_REORDER.md  WALLPAPER_ORCHESTRATOR_TESTING_TASK.md  WALLUST_FIX.md  contenarized-hyprland-bootstrap.sh  pytest.ini  rebuild_wallust_container.py  settings.toml
src/common/modules/colorscheme-generator/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/common/modules/colorscheme-generator/docs/: README.md
src/common/modules/colorscheme-generator/tests/: __init__.py  conftest.py  test_custom_backend.py  test_exceptions.py  test_factory.py  test_output_manager.py  test_pywal_backend.py  test_types.py  test_wallust_backend.py
src/common/modules/colorscheme_generator/: Makefile  pyproject.toml
src/common/modules/colorscheme_generator/config/: settings.toml
src/common/modules/colorscheme_generator/docs/: README.md
src/common/modules/colorscheme_generator/templates/: colors.css.j2  colors.json.j2  colors.sh.j2  colors.yaml.j2
src/common/modules/colorscheme_generator/tests/: __init__.py  test_factory.py
src/common/modules/container_manager/: pyproject.toml
src/common/modules/container_manager/docs/: README.md
src/common/modules/container_manager/tests/: __init__.py  test_docker_engine.py  test_factory.py  test_managers.py
src/common/modules/daemon/: Makefile  README.md  pyproject.toml
src/common/modules/daemon/examples/: README.md  event_demo.py  monitor.py
src/common/modules/daemon/tests/: test_config.py  test_daemon.py  test_event_broker.py  test_publisher.py
src/common/modules/event-protocol/: Makefile  README.md  pyproject.toml
src/common/modules/event-protocol/examples/: usage_example.py
src/common/modules/event-protocol/tests/: test_builder.py  test_models.py  test_validator.py
src/common/modules/package_manager/: pyproject.toml
src/common/modules/package_manager/docs/: api_reference.md  examples.md  overview.md  troubleshooting.md  usage_guide.md
src/common/modules/pipeline/: Makefile  README.md  pyproject.toml
src/common/modules/pipeline/docs/: GRANULAR_PROGRESS.md
src/common/modules/pipeline/examples/: demo_granular_progress.py  demo_parallel_progress.py  demo_realtime_progress.py
src/common/modules/pipeline/tests/: conftest.py  test_decorators.py  test_parallel_executor.py  test_pipeline_context.py  test_pipeline_integration.py  test_pipeline_step.py  test_progress.py  test_progress_tracker.py  test_task_executor.py
src/common/modules/wallpaper-processor/: Makefile  README.md  pyproject.toml
src/common/modules/wallpaper-processor/config/: settings.toml
src/common/modules/wallpaper-processor/tests/: __init__.py  test_effects.py  test_factory.py  test_pipeline.py
src/common/tools/colorscheme-orchestrator/: Makefile  README.md  pyproject.toml
src/common/tools/colorscheme-orchestrator/config/: settings.toml
src/common/tools/colorscheme-orchestrator/scripts/: README.md  rebuild_backend.py
src/common/tools/wallpaper-effects-orchestrator/: Makefile  README.md  pyproject.toml
src/common/tools/wallpaper-effects-orchestrator/config/: settings.toml
src/common/tools/wallpaper-effects-orchestrator/container/: Dockerfile  entrypoint.py
src/common/tools/wallpaper-effects-orchestrator/docs/: usage.md
src/common/tools/wallpaper-effects-orchestrator/tests/: __init__.py  test_config.py
src/common/tools/wallpaper-orchestrator/: Makefile  README.md  pyproject.toml  wallpaper_progress_notifier.py  watch_status.py
src/common/tools/wallpaper-orchestrator/config/: settings.toml
src/common/tools/wallpaper-orchestrator/container/: Dockerfile  entrypoint.py
src/common/tools/wallpaper-orchestrator/docs/: usage.md
src/common/tools/wallpaper-orchestrator/examples/: demo_full.sh  demo_run_orchestrator.py  demo_socket_integration.py  demo_visual.py  demo_with_client.py  test_socket_manager.py
src/common/tools/wallpaper-orchestrator/tests/: __init__.py  test_config.py  test_orchestrator.py  test_progress.py
src/dotfiles-installer/cli/: .pre-commit-config.yaml  Makefile  install-extensions.sh  main.py  pyproject.toml
src/dotfiles-installer/cli/config/: default_settings.py  directories.py  directories.toml  settings.toml
src/dotfiles-installer/cli/docs/: eww-installation.md  rust-installation.md
src/dotfiles-installer/cli/src/: exceptions.py
src/dotfiles-installer/cli/src/commands/: install.py  uninstall.py
src/dotfiles-installer/cli/src/config/: config.py  default_settings.py  defaults.py  directories.py  enums.py  project_root.py  settings.py
src/dotfiles-installer/cli/src/pipeline_steps/: pipeline.py  utils.py
src/dotfiles-installer/cli/src/tasks/: install_eww.py  install_nodejs.py  install_nvm.py  install_oh_my_zsh.py  install_pip_packages.py  install_pyenv.py  install_python.py  install_rust.py  install_rustup.py  install_starship.py
src/dotfiles-installer/cli/src/utils/: __init__.py  config_model_registry.py  container_orchestrator.py  docker_manager.py  file_manager.py  settings_override.py
src/dotfiles/modules/manager/: README.md  pyproject.toml
src/dotfiles/modules/manager/config/: settings.toml
src/dotfiles/modules/manager/docs/: api.md  architecture.md  hooks.md
src/dotfiles/modules/manager/tests/: __init__.py  test_cli.py  test_config.py  test_container.py  test_manager.py  test_wallpaper_service.py  test_wlogout_hook.py  test_wlogout_service.py
src/dotfiles/modules/rofi-colorscheme-viewer/: Makefile  README.md  launch-colorscheme-viewer.sh  mode-hex.sh  mode-json.sh  mode-rgb.sh  pyproject.toml  run-test.sh  test-python-module.sh  test-rofi-layout.sh  test-with-modes.sh
src/dotfiles/modules/rofi-colorscheme-viewer-minimal/: Makefile  README.md  pyproject.toml  test-minimal-viewer.sh
src/dotfiles/modules/rofi-colorscheme-viewer-minimal/config/: settings.toml
src/dotfiles/modules/rofi-wallpaper-selector/: Makefile  README.md  pyproject.toml
(+716 files in other folders)
