[project]
name = "colorscheme-generator"
version = "0.1.0"
description = "Generate color schemes from images using multiple backends (pywal, wallust, custom)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "pillow>=10.0.0",
    "jinja2>=3.1.6",
    "dynaconf>=3.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
pywal = ["pywal>=3.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "mypy>=1.11.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
]

[project.scripts]
# CLI entry point
colorscheme-gen = "colorscheme_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colorscheme_generator"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to false due to complex types

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

