[project]
name = "dotfiles-daemon"
version = "0.1.0"
description = "Persistent event daemon for dotfiles management system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotfiles-event-protocol",
]

[tool.uv.sources]
dotfiles-event-protocol = { path = "../event-protocol", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles_daemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

