[project]
name = "dotfiles-pipeline"
version = "0.1.0"
description = "Flexible pipeline execution framework with serial and parallel task support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotfiles-logging",
    "dotfiles-package-manager",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles_pipeline"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
dotfiles-logging = { path = "../logging" }
dotfiles-package-manager = { path = "../package_manager" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

