[project]
name = "wallpaper-orchestrator"
version = "0.1.0"
description = "Complete wallpaper setup: effects generation, color scheme, and wallpaper setting"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.11.9",
    "dynaconf>=3.2.0",
    "colorscheme-orchestrator",
    "wallpaper-effects-orchestrator",
    "wallpaper-effects-processor",
    "hyprpaper-manager",
    "dotfiles-pipeline",
    "dotfiles-logging",
    "dotfiles-container-manager",
    "dotfiles-state-manager",
]

[project.scripts]
wallpaper-orchestrator = "wallpaper_orchestrator.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "mypy>=1.11.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallpaper_orchestrator"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
colorscheme-orchestrator = { path = "../colorscheme-orchestrator", editable = true }
wallpaper-effects-orchestrator = { path = "../wallpaper-effects-orchestrator", editable = true }
wallpaper-effects-processor = { path = "../../modules/wallpaper-effects-processor", editable = true }
hyprpaper-manager = { path = "../../modules/hyprpaper-manager", editable = true }
dotfiles-pipeline = { path = "../../modules/pipeline", editable = true }
dotfiles-logging = { path = "../../modules/logging", editable = true }
dotfiles-container-manager = { path = "../../modules/container-manager", editable = true }
dotfiles-state-manager = { path = "../../modules/state-manager", editable = true }

[tool.black]
line-length = 79
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "N",    # pep8-naming
]
ignore = [
    "B008",  # do not perform function calls in argument defaults (typer.Option is fine)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "PTH"]  # Relax some rules for tests

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = false  # Set to false due to complex orchestration types
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["typer.*", "rich.*", "dynaconf.*", "colorscheme_orchestrator.*", "wallpaper_effects_orchestrator.*", "hyprpaper_manager.*", "wallpaper_processor.*", "dotfiles_pipeline.*", "dotfiles_logging.*", "dotfiles_state_manager.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
