[project]
name = "dotfiles-manager"
version = "0.1.0"
description = "Generic manager module for dotfiles components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotfiles-logging",
    "dotfiles-pipeline",
    "dotfiles-state-manager",
    "dotfiles-template-renderer",
    "hyprpaper-manager",
    "wallpaper-orchestrator",
    "dynaconf>=3.2.0",
    "pydantic>=2.0.0",
    "typer>=0.19.2",
    "rich>=13.0.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
dotfiles-manager = "dotfiles_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles_manager"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
dotfiles-logging = { path = "../../../common/modules/logging", editable = true }
dotfiles-pipeline = { path = "../../../common/modules/pipeline", editable = true }
dotfiles-state-manager = { path = "../../../common/modules/state-manager", editable = true }
dotfiles-template-renderer = { path = "../../../common/modules/template-renderer", editable = true }
hyprpaper-manager = { path = "../../../common/modules/hyprpaper-manager", editable = true }
wallpaper-orchestrator = { path = "../../../common/tools/wallpaper-orchestrator", editable = true }

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "N",    # pep8-naming
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "PTH"]  # Relax some rules for tests

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true
mypy_path = "src"
exclude = [
    "^build/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = ["dynaconf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"
