[project]
name = "rofi-wallpaper-selector"
version = "0.1.0"
description = "Rofi-based wallpaper and effect selector for dotfiles"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "dynaconf>=3.2.0",
    "pydantic>=2.0.0",
]

[project.scripts]
rofi-wallpaper-selector = "rofi_wallpaper_selector.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=rofi_wallpaper_selector",
    "--cov-report=term-missing",
    "--cov-report=html",
]
